# AI-Social-Media-Agent

./: .gitignore  README.md  docker-compose.yml  main.py  prompt.md
agents/: content_agent.py  topic_agent.py
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/agents/: analytics_agent.rs  content_agent.rs  media_agent.rs  mod.rs  publish_agent.rs  topic_agent.rs
backend/src/ai_client/: mod.rs
backend/src/api/: handlers.rs
backend/src/auth/: mod.rs
backend/src/config/: mod.rs
backend/src/models/: mod.rs  state.rs  task.rs
backend/src/orchestrator/: mod.rs
backend/src/xhs/: mod.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: index.js
frontend/src/pages/: Admin.vue  Dashboard.vue  Generate.vue  Login.vue  Result.vue  Tasks.vue  XhsAnalytics.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
